--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 ############################################
-# Changelog of the check_tl_health plugin #
+# Changelog of the check_ups_health plugin #
 ############################################
 
 2013-12-11 1.0
