rewrite using GLPlugin

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
-2014
+2014-02-14 2.0
+- rewrite using GLPlugin
 - raise apc battery temperature threshold
 
 2014-01-15 1.2.1
