--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
+2014-02-21 2.3
+- add a check for input voltage = 0
+
 2014-02-21 2.2
 - code cleanup
 
