--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 2014-05-22 2.4
 - finished GLPlugin migration
 - rearranged the classification checks
+- GLPlugin update
 
 2014-03-03 2.3.1
 - bugfix in XUPS input current
