--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
+2014-08-21 2.4.0.10
+- GLPluginSNMP update
+
+2014-08-20 2.4.0.9
+- GLPluginSNMP update
+
 2014-08-19 2.4.0.8
 - GLPlugin/SNMP update
 
