--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
+2014-08-22 2.4.0.12
+- bugfix in glplugin/uptime because of buggy snmpengineuptime
+
 2014-08-21 2.4.0.11
 - GLPluginSNMP update/uptime thresholds
 
