--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
+2014-12-02 2.5
+- implement Raritan PX2
+
 2014-10-01 2.4.0.13
 - update GLPlugin
 
