--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
+2014-12-22 2.5.2
+- remove Raritan PX2 (was moved to the new plugin check_pdu_health)
+
 2014-12-16 2.5.1
 - update GLPlugin
 
