--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
+2015-01-26 2.5.2.1
+- update GLPlugin[SNMP]
+
 2014-12-22 2.5.2
 - remove Raritan PX2 (was moved to the new plugin check_pdu_health)
 
