--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 # Changelog of the check_ups_health plugin #
 ############################################
 
+2015-04-23 2.5.2.3
+- update GLPlugin[SNMP]
+
+2015-04-23 2.5.2.2
+- update GLPlugin[SNMP]
+
 2015-01-26 2.5.2.1
 - update GLPlugin[SNMP]
 
