--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2015-07-08 2.5.2.5
+  bugfix in Socomec Netvision detection
 * 2015-05-20 2.5.2.4
   bugfix in V4 battery runtime (undef if not on batt.)
 * 2015-04-23 2.5.2.3
