--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2015-07-13 2.5.2.6
+  bugfix for apc powernet. noTransfer input ok, if battery 100% full
 * 2015-07-08 2.5.2.5
   bugfix in Socomec Netvision detection
 * 2015-05-20 2.5.2.4
