--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2016-01-20 2.5.2.7
+  bugfix for apc powernet. no battery status means ok
 * 2015-07-13 2.5.2.6
   bugfix for apc powernet. noTransfer input ok, if battery 100% full
 * 2015-07-08 2.5.2.5
