--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2017-02-02 2.8.0.1
+  fix cs-121 output when on battery (Thanks k0ste)
 * 2016-11-11 2.8
   add Emerson Liebert
 * 2016-09-27 2.7.1.2
