--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2017-03-08 2.8.0.2
+  fix xups selftest alarm
 * 2017-02-02 2.8.0.1
   fix cs-121 output when on battery (Thanks k0ste)
 * 2016-11-11 2.8
