--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* 2017-03-09 2.8.0.4
+  fix variable in non-standalone
+  filter ups-mib alarms
 * 2017-03-09 2.8.0.3
   remove unnecessary alarm info
 * 2017-03-08 2.8.0.2
