finish emerson/liebert/ups mix

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2017-03-25 2.8.1
+  finish liebert/ups mixed emerson in dubai
 * 2017-03-09 2.8.0.4
   fix variable in non-standalone
   filter ups-mib alarms
