fix liebert temperature label

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+* 2017-08-02 2.8.2.1
+  fix liebert temperature label
+* 2017-07-11 2.8.2
+  xppc standby mode is ok
+  update GLPlugin
 * 2017-05-12 2.8.1.1
   update GLPlugin
 * 2017-03-25 2.8.1
