add amb/remote temp/hum to xups

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* 2017-07-02 2.8.2.3
+  add amb/remote temp/hum to xups
+  update glplugin
 * 2017-12-06 2.8.2.2
   update glplugin
 * 2017-08-02 2.8.2.1
