--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2018-07-25 2.8.3.1
+  update glplugin (apc firmware bug)
 * 2018-07-05 2.8.3
   merged a lot of pull requests, thanks odenbach
 * 2018-07-02 2.8.2.3
