--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2019-11-15 2.8.3.5
+  exclude unkown temp sensor for RUD101 mgmt cards (Thanks Matthias Gallinger)
 * 2019-10-22 2.8.3.4
   fix false positive in UPS-MIB (remainingminutes and x-thresholds)
 * 2019-03-18 2.8.3.3
