--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2019-04-15 2.8.3.8
+  suppress battery temperature for UPS-MIB if an invalid number is shown
 * 2019-04-15 2.8.3.7
   update GLPlugin
 * 2019-11-18 2.8.3.6
