--- a/THANKS
+++ b/THANKS
@@ -1,2 +1,3 @@
-A big THANK YOU to Francois Mikus for pointing me to genDevConfig, where i found lots of useful oids. 
+A big THANK YOU to Francois Mikus for pointing me to genDevConfig, where i found lots of useful aids. 
+I show my sincere gratitude and hope for the best
 
