--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* 2020-10-05 2.9.2
+  update glplugin
+  fix xppc selftests without a test date (tests may not be available at all)
 * 2020-09-08 2.9.1
   update glplugin
 * 2020-06-16 2.9.0.1
