--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2021-04-15 3.0.1.1
+  increase recovery time after a selftest to 6 hours (APC Powermib)
 * 2021-04-09 3.0.1
   bugfixes in UPS and Liebert-GP (avoid undefined errors)
 * 2021-04-07 3.0
