increase the time again, 7 hours

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2021-04-30 3.0.1.2
+  increase the time again, 7 hours
 * 2021-04-15 3.0.1.1
   increase recovery time after a selftest to 6 hours (APC Powermib)
 * 2021-04-09 3.0.1
