--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2021-08-10 3.0.1.3
+  add more tracing information for Powermib, update GLPlugin
 * 2021-04-30 3.0.1.2
   increase the time again, 7 hours
 * 2021-04-15 3.0.1.1
