--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2021-12-23 3.0.3
+  bugfix in XPPC, get input voltage from UPS-MIB
 * 2021-12-06 3.0.2
   bugfix in UPS battery temperature
   update LIEBERT
