--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2023-02-17 3.0.5.1
+  disable lgpFlexibleBasicTable (was unused, caused timeouts)
 * 2023-01-13 3.0.5
   support eConversion mode for PowerNet based devices (Schneider for example)
 * 2022-05-02 3.0.4.1
