--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2023-03-14 3.1
+  updated LIEBERT-MIBs
 * 2023-02-17 3.0.5.1
   disable lgpFlexibleBasicTable (was unused, caused timeouts)
 * 2023-01-13 3.0.5
