--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* 2023-08-25 4.0
+  bugfix in XUPS-MIB alarms
+  rewrite the plugin to make it epn-ready
 * 2023-03-14 3.1
   updated LIEBERT-MIBs
 * 2023-02-17 3.0.5.1
