add temperatures via lgpFlexibleEntry

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2024-02-19 4.1.1
+  add temperatures for Liebert (or Vertiv or irgendein umgelabelter Schrott, ueber den schon fuenf Hersteller gerutscht sind)
 * 2024-02-19 4.1
   reorg UPS components
 * 2023-08-29 4.0.0.1
