--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2024-08-08 4.3
+  improve and fix Liebert Flexible temperatures, add humidity
 * 2024-06-04 4.2.1
   show PowerNet temperatures and humidity sensors
 * 2024-05-28 4.2
