--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2024-10-01 4.3.0.1
+  handle external thresholds for Liebert Flex temperatures, which have no builtn thresholds.
 * 2024-08-08 4.3
   improve and fix Liebert Flexible temperatures, add humidity
 * 2024-06-04 4.2.1
