--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 * 2024-10-08 4.3.1
   fix thresholds for XUPS without internal upper/lower oids
+  fix liebert flexible temperatures, add cabinet temperature, respect warnings/criticalx
 * 2024-10-02 4.3.0.2
   fix external thresholds for Liebert Flex temperatures
 * 2024-10-01 4.3.0.1
