--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* 2025-05-22 4.3.2.3
+  make an existing, but empty APC Powernet fall back to UPS-MIB
 * 2025-05-22 4.3.2.2
   improve Liebert uptime text with revision/model
 * 2025-04-04 4.3.2.1
